--- a/play.html
+++ b/play.html
@@ -15,7 +15,7 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Theme CSS -->
-    <link href="css/clean-blog.min.css" rel="stylesheet">
+    <link href="css/clean-blog.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -83,16 +83,16 @@
 
     <!-- Main Content -->
     <div class="container">
-        <div class="row">
+        <div class="row ">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <div class="row">
+                    <div class="row" >
                             <div class="col-md-6">
                                     <h2 class="section-heading" style="color:darksalmon">Spring</h2>
                                     <img class="img-responsive" src="img/spring.jpg" alt="">
                             </div>
                             <div class="col-md-6">
-                                    <h2 class="section-heading" style="color:aquamarine">Summer</h2>
-                                    <img class="img-responsive" src="img/summer.jpg" alt="">
+                                    <h2 class="section-heading" style="color:aquamarine;">Summer</h2>
+                                    <img id="abc" class="img-responsive" src="img/summer.jpg" alt="">
                             </div>
                           </div>
                           <div class="row">
